# Tinker

./: .cursorrules  .env.example  .gitignore  .gitmodules  2025-07-23-this-session-is-being-continued-from-a-previous-co.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  LESSONS_LEARNED.md  MCP_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  PLATFORM_SPECIFIC.md  ROADMAP.md  build.rs  error_log.txt  fix_plan.md  readme.md  test_api.py  test_dom_inspector.py  test_dom_simple.py  test_mcp_server.py  test_network_monitoring.py  test_recording_replay.py  test_visual_api.py
.cargo/: config.toml
.claude/: settings.local.json
assets/js/: init.js
docs/: BROWSER_ANALYSIS.md  EVENTGHOST_ANALYSIS.md  GTK_MIGRATION.md  ICED_MIGRATION.md  IMPLEMENTATION_PLAN.md  SUBMODULES_ANALYSIS.md  mcp-server.md  performance-monitoring.md  testing-guide.md
resources/: init.js
scripts/: build.sh
src/: commands.rs  event.rs  ipc.rs  lib.rs  main.rs  utils.rs  window.rs
src/api/: mod.rs
src/browser/: console.rs  error.rs  event_viewer.rs  inspector.rs  keyboard.rs  menu.rs  menu_ui.rs  message.rs  mod.rs  native_ui.rs  navigation.rs  network.rs  performance.rs  replay.rs  session.rs  state_manager.rs  tab.rs  tab_ui.rs  tabs.rs  tests.rs  visual.rs  window_manager.rs
src/cli/: mod.rs
src/engine/: mod.rs
templates/: console_inject.js  performance_collection.js
tests/: browser_engine_tests.rs  browser_tests.rs  cli_tests.rs  event_tests.rs  keyboard_tests.rs  mcp_tests.rs  performance_tests.rs
tools/: capture.ps1
(+37 files in other folders)
