[package]
name = "tinker"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.6", package = "gtk4", features = ["v4_8"] }
gdk = "0.6"
gio = { version = "0.17", features = ["v2_66"] }
glib = { version = "0.17", features = ["v2_66"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
pkg-config = "0.3"
