[package]
name = "tinker"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10", default-features = false, features = ["tokio", "wgpu"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
url = "2.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
pkg-config = "0.3"
