[package]
name = "tinker"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.24"
wry = { version = "0.35", default-features = true }
tokio = { version = "1.0", features = ["full"] }
url = "2.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
pkg-config = "0.3"
